Added my section draft

--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -28,6 +28,8 @@
 \newcommand{\jj}[1]{\if\submissionMode0{\em\color{blue}(JJ: #1)}\else\fi}
 \newcommand{\jeff}[1]{\if\submissionMode0{\em\color{blue}(Jeff: #1)}\else\fi}
 \newcommand{\suggestion}[1]{\if\submissionMode0{\color{green}\textbf{#1}}\else\fi}
+\newcommand{\anna}[1]{\if\submissionMode0{\em\color{purple}(Anna: #1)}\else\fi}
+
 
 %Submission guidelines for PLoS ONE: http://journals.plos.org/plosone/s/submission-guidelines
 
@@ -86,6 +88,9 @@ $^4$ Program in Computational Biology and Bioinformatics and $^5$ Department of 
 
 \section{Python scripting improves ease-of-use}
 \input{python.tex}
+
+\section{Results} \anna{Just adding a section for my part - we can move it wherever we think is best as far as organization goes later.}
+\input{KSTests.tex}
 
 \section{Conclusions}
 \input{conclusions.tex}
