--- a/coverletter.tex
+++ b/coverletter.tex
@@ -23,7 +23,7 @@
 Dear Editor, 
 \\
 
-We are writing to submit a manuscript entitled ï¿½{\sc osprey} 3: Open-Source Protein Redesign for You, Refactored, with Powerful New Featuresï¿½ to [JOURNAL NAME].  
+We are writing to submit a manuscript entitled Ò{\sc osprey} 3: Open-Source Protein Redesign for You, Refactored, with Powerful New FeaturesÓ to [JOURNAL NAME].  
 
 Protein and drug design algorithms enable the development of new therapeutics that might be impossible or too expensive to discover using experimental methods.  For over a decade, my lab has been working on the \osprey software package, which implements unique and powerful algorithms for this problem.  \osprey is distinguished by its combination of algorithms with provable guarantees of accuracy, modeling of continuous flexibility and free energy, and ability to search very large sequence spaces efficiently.  
 
@@ -33,48 +33,11 @@ This work, therefore, is immediately applicable for both users and developers of
 
 We believe that the following scientists would be well qualified to review this work:
 \\
-
-\hspace{-0.285in} Bruce Tidor \\
-Department of Biological Engineering, Massachusetts Institute of Technology \\
-Department of Electrical Engineering \& Computer Science, Massachusetts Institute of Technology \\
-Computer Science and Artificial Intelligence Laboratory, Massachusetts Institute of Technology \\
-Room 32-212 \\
-Cambridge, MA 02139-4307 USA \\
-Email: tidor@mit.edu \\
- \\
-
-\hspace{-0.285in} Ivet Bahar \\
-Department of Computational \& Systems Biology \\
-School of Medicine, University of Pittsburgh \\
-3064 Biomedical Science Tower 3 \\
-3501 Fifth Avenue, Pittsburgh, PA 15213 \\
-Email: bahar@pitt.edu \\
-  \\
-
-\hspace{-0.285in} Ron Elber \\
-Department of Chemistry and Biochemistry, University of Texas \\
-Institute of Computational Sciences and Engineering, University of Texas \\
-1 University Station, ICES, C0200 \\
-The University of Texas at Austin \\
-Austin, TX 78712 \\
-Email: ron@ices.utexas.edu \\
-   \\
-
-Due to competing interests, we request excluding the following people as potential reviewers: David Baker (University of Washington), Brian Kuhlman (University of North Carolina), and Tanja Kortemme (University of California, San Francisco).  
-
-The corresponding author for this work is:
-    \\
-
-\hspace{-0.285in} Professor Bruce R. Donald \\
-Department of Computer Science, Duke University \\
-Department of Biochemistry, Duke University Medical Center  \\
-Department of Chemistry, Duke University \\
-Room D106, Levine Science Research Center \\
-Research Drive \\
-Durham, NC 27708 USA \\
-Phone: 919-660-6583 \\
-Fax: 919-660-6519 \\
-Email: [EMAIL FOR JOURNAL AND YEAR HERE] \\
+\hspace{-0.285in} Bruce Tidor \\Department of Biological Engineering, Massachusetts Institute of Technology \\Department of Electrical Engineering \& Computer Science, Massachusetts Institute of Technology \\Computer Science and Artificial Intelligence Laboratory, Massachusetts Institute of Technology \\Room 32-212 \\Cambridge, MA 02139-4307 USA \\Email: tidor@mit.edu \\
+ \\\hspace{-0.285in} Ivet Bahar \\Department of Computational \& Systems Biology \\School of Medicine, University of Pittsburgh \\3064 Biomedical Science Tower 3 \\3501 Fifth Avenue, Pittsburgh, PA 15213 \\Email: bahar@pitt.edu \\
+  \\\hspace{-0.285in} Ron Elber \\Department of Chemistry and Biochemistry, University of Texas \\Institute of Computational Sciences and Engineering, University of Texas \\1 University Station, ICES, C0200 \\The University of Texas at Austin \\Austin, TX 78712 \\Email: ron@ices.utexas.edu \\
+   \\Due to competing interests, we request excluding the following people as potential reviewers: David Baker (University of Washington), Brian Kuhlman (University of North Carolina), and Tanja Kortemme (University of California, San Francisco).  The corresponding author for this work is:
+    \\\hspace{-0.285in} Professor Bruce R. Donald \\Department of Computer Science, Duke University \\Department of Biochemistry, Duke University Medical Center  \\Department of Chemistry, Duke University \\Room D106, Levine Science Research Center \\Research Drive \\Durham, NC 27708 USA \\Phone: 919-660-6583 \\Fax: 919-660-6519 \\Email: [EMAIL FOR JOURNAL AND YEAR HERE] \\
 
 \end{document}  
-
+
