Latest KSTests.tex

--- a/KSTests.tex
+++ b/KSTests.tex
@@ -11,7 +11,7 @@ Of the reported mutations, for our study we only included mutations proximal to 
  \hline 
  1X1U   & 0.755 \\
  \hline
- 2B5I   & 0.519 \\
+ 2B5I   & 0.554 \\
  \hline
  2PCB   & 0.500 \\
  \hline
@@ -28,6 +28,6 @@ Of the reported mutations, for our study we only included mutations proximal to 
 \begin{figure}\label{fig:rankings}
 \center
 \includegraphics[width=0.9\textwidth]{figures/Rankings.png}
-\caption{Testing the accuracy of \osprey3.}
+\caption{Testing the accuracy of the \ks algorithm in \osprey3 by comparing \ks rankings to experimentally reported rankings. Each system is represented by its corresponding PDB ID and a linear trendline is shown for each in its corresponding color according to the legend.}
 \end{figure}
 
