--- a/KSTests.tex
+++ b/KSTests.tex
@@ -1,10 +1,10 @@
-To evaluate the accuracy of the \osprey \ks algorithm, we performed a series of designs for a variety of protein-protein interfaces as retrospective validation. We used \ks to computationally predict experimentally measured changes in binding for each system. Each protein structure is listed by PDB ID in Table \ref{table:spearman} (find more detailed system information in Supplemental Table X). Mutations reported in the literature were tested for each system 
+To evaluate the accuracy of the \osprey \ks algorithm, we performed a series of designs for a variety of protein-protein interfaces (PPIs) as retrospective validation. We used \ks to computationally predict experimentally measured changes in binding for each PPI. Each protein structure is listed by PDB ID in Table \ref{table:spearman} (find more detailed PPI information in Supplemental Table X \anna{this would be where all the systems are listed and potentially all of the mutations we tested}).
 
 \anna{Move to supplemental? "These systems include barnase with its peptide inhibitor barstar, the cytochrome {\it c}/cytochrome {\it c} peroxidase complex, interferon (IFN)$\alpha$2 with its receptor, ifnar2, the interleukin 2 (IL-2)/IL-2 receptor $\alpha$ (IL-2R$\alpha$) complex, and an antibody fragment bound to the I-domain of the integrin VLA1."}
 
-Our retrospective validation experiments focused on mutations at residues in or proximal to the protein-protein interface. Including all such experimentally tested and reported mutations, each system ranges from 5 to 36 ranked designs. Each design included one or two mutable residues along with a set of surrounding flexible residues. Flexible residues were chosen by selecting all residues within 4 \AA of the mutable residues and removing those which only have backbone interactions. 
+Our retrospective validation experiments focused on mutations at residues in or proximal to the protein-protein interface. Including all such experimentally tested and reported mutations, each structure included anywhere from 5 to 36 ranked designs. Each design included one or two mutable residues along with a set of surrounding flexible residues. Flexible residues were chosen by selecting all residues within 4 \AA of the mutable residues and removing those which only have backbone interactions. 
 
-For each system, the \ks scores were ranked in increasing order of experimental binding. Spearman's $\rho$ values were subsequently calculated for each system by calculating the statistical dependence between the \ks score rankings and the experimentally measured rankings. 
+For each system, the \ks scores were ranked in increasing order of reported experimental binding. Spearman's $\rho$ values were subsequently calculated for each system by calculating the statistical dependence between the \ks score rankings and the experimentally measured rankings. 
 
 \begin{table}[h!]\label{table:spearman}
 \centering
