--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -74,22 +74,22 @@ $^4$ Program in Computational Biology and Bioinformatics and $^5$ Department of 
 \section{Introduction}
 \input{introduction.tex}
 
+\section{Performance enhancements in version 3}
+\input{Astar.tex}
+\input{GPU.tex}
+
+\jeff{Do we want to mention MPLP here?}
+%etc
+
+\section{Python scripting improves ease-of-use}
+\input{python.tex}
+
 \section{New protein design algorithms in version 3}
 \input{LUTE.tex}
 \input{CATS.tex}
 \input{BBKS.tex}
 
-\jeff{Do we want to mention MPLP here?}
-%etc
-
-\section{Performance enhancements in version 3}
-\input{Astar.tex}
-\input{GPU.tex}
-
-\section{Python scripting improves ease-of-use}
-\input{python.tex}
-
-\section{Results} \anna{Just adding a section for my part - we can move it wherever we think is best as far as organization goes later.}
+\section{Accuracy benchmarks} %\anna{Just adding a section for my part - we can move it wherever we think is best as far as organization goes later.}
 \input{KSTests.tex}
 
 \section{Conclusions}
