--- a/references.bib
+++ b/references.bib
@@ -7,7 +7,104 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{binding2barnase,
+  title={Interaction of barnase with its polypeptide inhibitor barstar studied by protein engineering},
+  author={Schreiber, Gideon and Fersht, Alan R},
+  journal={Biochemistry},
+  volume={32},
+  number={19},
+  pages={5145--5150},
+  year={1993},
+  publisher={ACS Publications}
+}
 
+@article{bindingbarnase,
+  title={Thermodynamics of the interaction of barnase and barstar: changes in free energy versus changes in enthalpy on mutation1},
+  author={Frisch, Christian and Schreiber, Gideon and Johnson, Christopher M and Fersht, Alan R},
+  journal={Journal of molecular biology},
+  volume={267},
+  number={3},
+  pages={696--706},
+  year={1997},
+  publisher={Elsevier}
+}
+
+@article{pdb1x1u,
+  title={Water-mediated interaction at a protein--protein interface},
+  author={Ikura, Teikichi and Urakubo, Yoshiaki and Ito, Nobutoshi},
+  journal={Chemical Physics},
+  volume={307},
+  number={2-3},
+  pages={111--119},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{bindingcytc,
+  title={Cytochrome c/cytochrome c peroxidase complex: effect of binding-site mutations on the thermodynamics of complex formation},
+  author={Erman, James E and Kresheck, Gordon C and Vitello, Lidia B and Miller, Mark A},
+  journal={Biochemistry},
+  volume={36},
+  number={13},
+  pages={4054--4060},
+  year={1997},
+  publisher={ACS Publications}
+}
+
+@article{pdb2pcb,
+  title={Crystal structure of a complex between electron transfer partners, cytochrome c peroxidase and cytochrome c},
+  author={Pelletier, Huguette and Kraut, Joseph},
+  journal={Science},
+  volume={258},
+  number={5089},
+  pages={1748--1755},
+  year={1992},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{bindingifna2,
+  title={New structural and functional aspects of the type I interferon-receptor interaction revealed by comprehensive mutational analysis of the binding interface},
+  author={Piehler, Jacob and Roisman, Laila C and Schreiber, Gideon},
+  journal={Journal of Biological Chemistry},
+  volume={275},
+  number={51},
+  pages={40425--40433},
+  year={2000},
+  publisher={ASBMB}
+}
+
+@article{pdb3s9d,
+  title={Structural linkage between ligand discrimination and receptor activation by type I interferons},
+  author={Thomas, Christoph and Moraga, Ignacio and Levin, Doron and Krutzik, Peter O and Podoplelova, Yulia and Trejo, Angelica and Lee, Choongho and Yarden, Ganit and Vleck, Susan E and Glenn, Jeffrey S and others},
+  journal={Cell},
+  volume={146},
+  number={4},
+  pages={621--632},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{bindingil2,
+  title={Structure-function relationships for the interleukin 2 receptor: location of ligand and antibody binding sites on the Tac receptor chain by mutational analysis},
+  author={Robb, Richard J and Rusk, Cynthia M and Neeper, Michael P},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={85},
+  number={15},
+  pages={5654--5658},
+  year={1988},
+  publisher={National Acad Sciences}
+}
+
+@article{pdb2b5i,
+  title={Structure of the quaternary complex of interleukin-2 with its $\alpha$, {\ss}, and $\gamma$c receptors},
+  author={Wang, Xinquan and Rickert, Mathias and Garcia, K Christopher},
+  journal={Science},
+  volume={310},
+  number={5751},
+  pages={1159--1163},
+  year={2005},
+  publisher={American Association for the Advancement of Science}
+}
 
 @inbook{BBK*,
 	Author = {Ojewole, Adegoke A. and Jou, Jonathan D. and Fowler, Vance G. and Donald, Bruce R.},
