--- a/KSTests.tex
+++ b/KSTests.tex
@@ -23,7 +23,7 @@ For each system, the \ks scores were ranked in increasing order of reported expe
  \textbf{Across Structures} &   \textbf{0.762}  \\
  \hline
 \end{tabular}
-\caption{Spearman's $\rho$ table. A Spearman's $\rho$ value is calculated for each system and shown here. The "Across Structures" value is calculated by... }
+\caption{Spearman's $\rho$ table. A Spearman's $\rho$ value is calculated for each system and shown here. The "Across Structures" value is calculated by ranking each system individually and then calculating the Spearman's $\rho$ across all of the designs.}
 \end{table}
 
 \begin{figure}\label{fig:rankings}
