--- a/LUTE.tex
+++ b/LUTE.tex
@@ -2,9 +2,8 @@
 
 {\sc osprey} 3 comes with LUTE~\cite{LUTE_RECOMB}, a new algorithm that addresses two issues with previous versions of {\sc osprey}.  
 
-First, previous versions modeled continuous flexibility by enumerating conformations in order of a~\textit{lower bound} on minimized conformational energy~\cite{minDEE,iMinDEE}.  This approach is often inefficient in that many conformations---possibly even a number exponential in the number of mutable residues---can have lower bounds below the GMEC energy, and thus will all have to be enumerated.  Only a small gain in efficiency is obtained by minimizing the energies of the partial conformations corresponding to nodes of the \as tree~\cite{EPIC}, again because of the gap between lower bounds and actual minimized energies.  LUTE addresses this problem by directly optimizing the minimized energies of full conformations, which are estimated using an expansion in low-order tuples of residue conformations.  Thus, the burden of modeling continuous flexibility is shifted from the combinatorial optimization (\as) step, which has unfavorable asymptotic scaling, to a precomputation step that only scales quadratically with the number of residues.  This precomputation step consists of sampling a ``training set'' of conformations, computing their minimized energies, and then inferring the coefficients of the expansion.  These coefficients can then be used as residue interaction energies in combinatorial search, whether single- or multistate.  The combinatorial search will have the form of a discrete search and thus achieve high efficiency, but will accurately match the results of a continuously flexible search.  
-
-Second, all previous combinatorial protein design algorithms have relied on an explicit decomposition of the energy as a sum of local (e.g., pairwise) terms.  This made design with energy functions that do not have this form difficult. For example, previous use of the Poisson-Boltzmann~\cite{PBSA} energy function, the gold standard of implicit solvent modeling, in design has relied either on~\textit{post-hoc} reranking of a limited number of favorable designs from a calculation based on pairwise energies, which would cause all other designs favored by the Poisson-Boltzmann energetics to be missed, or on a decomposition that is incompatible with continuous flexibility~\cite{PB_pairwise}.  However, LUTE need only calculate the energies of entire conformations in order to infer its coefficients---explicit pairwise energies are not part of this calculation.  Thus LUTE can straightforwardly support general energy functions, and as shown in~\cite{LUTE_RECOMB} it can obtain good fits at least in the case of Poisson-Boltzmann energies.  
+First, previous versions modeled continuous flexibility by enumerating conformations in order of a~\textit{lower bound} on minimized conformational energy~\cite{minDEE,iMinDEE}. LUTE addresses this problem by directly optimizing the minimized energies of full conformations, which are estimated using an expansion in low-order tuples of residue conformations.  Thus, the burden of modeling continuous flexibility is shifted from the combinatorial optimization (\as) step, which has unfavorable asymptotic scaling, to a precomputation step that only scales quadratically with the number of residues. 
+Second, all previous combinatorial protein design algorithms have relied on an explicit decomposition of the energy as a sum of local (e.g., pairwise) terms.  This made design with energy functions that do not have this form difficult. LUTE can straightforwardly support general energy functions, and, as shown in~\cite{LUTE_RECOMB}, it can obtain good fits at least in the case of Poisson-Boltzmann energies.  
 
 {\sc osprey} users can now turn on LUTE for continuously flexible calculations simply by setting a boolean flag.  %simply by setting the configuration ``useTupExp'' to true.  
-{\sc osprey} 3 also supports design with Poisson-Boltzmann solvation energy calculations, which use the DelPhi~\cite{OSOR,DelPhi_surface} software for the single-point Poisson-Boltzmann calculations (we ask the user to download DelPhi separately for licensing reasons).  But as an algorithm, LUTE's abilities go well beyond these features---it is a general tool for taking advanced modeling of a single voxel in a system's conformation space and putting into a suitable form for efficient, discrete combinatorial optimization calculations yielding the best design sequence.  As mentioned in~\cite{LUTE_RECOMB}, we are currently working on adding other capabilities like continuous entropy modeling this way.  Moreover, any other researchers who would like to model some phenomenon in protein design, but find it difficult to fit into the usual discrete pairwise framework used in design calculations, are encouraged to try LUTE and {\sc osprey} 3 as a framework for their modeling.  Such improved modeling is essential to increasing the reliability of and range of feasible uses for computational protein design.  
+{\sc osprey} 3 also supports design with Poisson-Boltzmann solvation energy calculations, which use the DelPhi~\cite{OSOR,DelPhi_surface} software for the single-point Poisson-Boltzmann calculations (we ask the user to download DelPhi separately for licensing reasons). Such improved modeling is essential to increasing the reliability of and range of feasible uses for computational protein design.  
