--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,1 @@
-We present \osprey 3, a new and greatly improved release of the \osprey protein design software.  \osprey 3 features a convenient Python interface, greatly improving \osprey's ease of use.  \osprey 3 also includes several new algorithms, which introduce substantial speedups as well as improved biophysical modeling.  \bbks is a much more efficient version of \osprey's \ks free energy-based protein design algorithm.  LUTE uses machine learning to frame designs with advanced modeling assumptions and continuous flexibility as very efficiently solvable discrete optimization problems without significant loss of accuracy.  \bwmstar exploits sparsity in residue interaction graphs to perform protein design in provably subexponential time, and CATS improves \osprey's modeling of backbone flexibility.  Even without these improved algorithms, \osprey 3 is over two orders of magnitude faster than previous versions of \osprey when run on the same hardware.  It also introduces GPU support, which provides an additional speedup of over an order of magnitude when run on desktop-class GPUs.  \osprey has always offered a unique package of advantages over other design software: provable design algorithms, awareness of continuous flexibility during design, and modeling of conformational entropy.  With this new version, we believe it empowers significantly improved computational protein design compared to the previous state of the art.  
+We present \osprey 3, a new and greatly improved release of the \osprey protein design software.  \osprey 3 features a convenient Python interface, greatly improving \osprey's ease of use.  \osprey 3 also includes several new algorithms, which introduce substantial speedups as well as improved biophysical modeling.  Even without these improved algorithms, \osprey 3 is over two orders of magnitude faster than previous versions of \osprey when run on the same hardware.  It also introduces GPU support, which provides an additional speedup of over an order of magnitude when run on desktop-class GPUs.  \osprey has always offered a unique package of advantages over other design software: provable design algorithms, awareness of continuous flexibility during design, and modeling of conformational entropy.  With this new version, we believe it empowers significantly improved computational protein design compared to the previous state of the art.  
