--- a/KSTests.tex
+++ b/KSTests.tex
@@ -1,6 +1,4 @@
-To evaluate the accuracy of the \osprey \ks algorithm~\cite{K*}, we performed a series of designs for a variety of protein-protein interfaces (PPIs) as retrospective validation. We used \ks to computationally predict experimentally measured changes in binding for each PPI. Each protein structure is listed by PDB ID in Table \ref{table:spearman} \cite{pdb1x1u,pdb2pcb,pdb3s9d,pdb2b5i}(find more detailed PPI information in Supplemental Table X \anna{this would be where all the systems are listed and potentially all of the mutations we tested}).
-
-\anna{Move to supplemental? "These systems include barnase with its peptide inhibitor barstar \cite{binding2barnase,bindingbarnase}, the cytochrome {\it c}/cytochrome {\it c} peroxidase complex \cite{bindingcytc}, interferon (IFN)$\alpha$2 with its receptor, ifnar2  \cite{bindingifna2}, and the interleukin 2 (IL-2)/IL-2 receptor $\alpha$ (IL-2R$\alpha$) complex \cite{bindingil2}."}
+To evaluate the accuracy of the \osprey \ks algorithm~\cite{K*}, we performed a series of designs for a variety of protein-protein interfaces (PPIs) as retrospective validation. We used \ks to computationally predict experimentally measured changes in binding for each PPI. Each protein structure is listed by PDB ID in Table \ref{table:spearman} \cite{pdb1x1u,pdb2pcb,pdb3s9d,pdb2b5i}(find more detailed PPI information in Supplemental Table X \anna{this would be where all the systems are listed and potentially all of the mutations we tested}).  These systems include barnase with its peptide inhibitor barstar \cite{binding2barnase,bindingbarnase}, the cytochrome {\it c}/cytochrome {\it c} peroxidase complex \cite{bindingcytc}, interferon (IFN)$\alpha$2 with its receptor, ifnar2  \cite{bindingifna2}, and the interleukin 2 (IL-2)/IL-2 receptor $\alpha$ (IL-2R$\alpha$) complex \cite{bindingil2}.
 
 Our retrospective validation experiments focused on mutations at residues in or proximal to the protein-protein interface. Including all such experimentally tested and reported mutations \cite{binding2barnase,bindingbarnase,bindingcytc,bindingifna2,bindingil2}, each structure included anywhere from 5 to 19 ranked designs. In total, we tested 58 mutations using default, out-of-the-box \osprey settings and parameters. Each design included one or two mutable residues along with a set of surrounding flexible residues. Flexible residues were chosen by selecting all residues within 4 \AA of the mutable residues and removing those which only have backbone interactions. 
 
