--- a/introduction.tex
+++ b/introduction.tex
@@ -2,7 +2,7 @@ For over a decade, the {\sc osprey} software package~\cite{OSPREY,minDEE,OSPREY_
 
 However, as {\sc osprey} grew to include more algorithms and features, the code became increasingly complicated and difficult to maintain.  The growing complexity of the software also hindered its ease-of-use. {\sc ospery} 3 represents a complete refactoring of the code, and presents a simpler and more intuitive interface that makes protein redesign much easier than before. The new code organization also facilitates adding new features to the open-source project, both by ourselves and by other contributors.  We have introduced a convenient Python scripting interface and added support for GPU acceleration of the bulk of the computation, allowing designs to be completed much more quickly and easily than in previous versions of {\sc osprey}.  We believe {\sc osprey} 3 will be a very useful tool for both developers and users of provably accurate protein design algorithms.  
 
-\subsection{Past successes of {\sc osprey}}
+\jccsubsection{Past successes of {\sc osprey}}
 
 {\sc osprey} has been used for an impressive number of empirically successful designs, ranging from enzyme design to antibody design to prediction of antibiotic resistance mutations.  Notably, {\sc osprey} has been successful in many~\textit{prospective} experimental studies, i.e., studies in which our designed sequences are tested experimentally, thus providing more realistic validation than a retrospective comparison of OSPREY calculations to previous experimental results.  {\sc osprey} is most applicable to problems that can be posed in terms of binding, allowing the $K^*$ algorithm and its variants to select the optimal sequence based on an estimate of binding free energy.  But most protein design problems can be posed in this way, sometimes in terms of binding to more than one ligand.  
 
