--- a/python.tex
+++ b/python.tex
@@ -1,5 +1,5 @@
 
-One of the most visible additions to \osprey3 is the Python application programming interface (API), which allows fine-grained control over design parameters in a streamlined and easy-to-use experience. \osprey3 still supports a command-line interface with configuration files for backwards compatibility, but new development will be focused mostly on the new Python interface. \jeff{Is this even true? Not entirely sure...} 
+One of the most visible additions to \osprey3 is the Python application programming interface (API), which allows fine-grained control over design parameters in a streamlined and easy-to-use experience. \osprey3 still supports a command-line interface with configuration files for backwards compatibility, but new development will be focused mostly on the new Python interface. %\jeff{Is this even true? Not entirely sure...} 
 
 The \osprey3 distribution contains a Python module which can be installed using the popular package manager {\sc pip}. Once installed, using \osprey3 is as easy as writing a python script. High-performance computations are still performed in the Java virtual machine to give the fastest runtimes, so Java is still required to run \osprey3, but communication between the Python enviroment and the Java environment is handled behind-the-scenes, and \osprey3 still looks and feels like a regular Python application.
 
