--- a/OSPREY3.tex
+++ b/OSPREY3.tex
@@ -16,6 +16,10 @@
 \usepackage[numbers,super,comma,sort&compress]{natbib}
 %\usepackage[nolists, nomarkers, figuresfirst]{endfloat}
 
+\usepackage{array,multirow,graphicx}
+\usepackage{tabulary}
+\newcolumntype{K}[1]{>{\centering\arraybackslash}p{#1}}
+
 \usepackage{xcolor}
 \usepackage{xspace}
 \def\osprey{{\sc{osprey}}\xspace}
