--- a/KSTests.tex
+++ b/KSTests.tex
@@ -1,28 +1,108 @@
-To evaluate the accuracy of the \osprey \ks algorithm~\cite{K*}, we performed a series of designs for a variety of protein-protein interfaces (PPIs) as retrospective validation. We used \ks to computationally predict experimentally measured changes in binding for each PPI. Each protein structure is listed by PDB ID in Table \ref{table:spearman} \cite{pdb1x1u,pdb2pcb,pdb3s9d,pdb2b5i}(find more detailed PPI information in Supplemental Table X \anna{this would be where all the systems are listed and potentially all of the mutations we tested}).  These systems include barnase with its peptide inhibitor barstar \cite{binding2barnase,bindingbarnase}, the cytochrome {\it c}/cytochrome {\it c} peroxidase complex \cite{bindingcytc}, interferon (IFN)$\alpha$2 with its receptor, ifnar2  \cite{bindingifna2}, and the interleukin 2 (IL-2)/IL-2 receptor $\alpha$ (IL-2R$\alpha$) complex \cite{bindingil2}.
+To evaluate the accuracy of the \osprey \ks algorithm~\cite{K*}, we performed a series of designs for a variety of protein-protein interfaces (PPIs) as retrospective validation. We used \ks to computationally predict experimentally measured changes in binding for each PPI. Each protein structure is listed by name and PDB ID in Table \ref{table:spearman} \cite{pdb1x1u,pdb2pcb,pdb3s9d,pdb2b5i}.  These systems include barnase with its peptide inhibitor barstar \cite{binding2barnase,bindingbarnase}, the cytochrome {\it c}:cytochrome {\it c} peroxidase complex \cite{bindingcytc}, interferon (IFN)$\alpha$2 with its receptor, ifnar2  \cite{bindingifna2}, and the interleukin 2 (IL-2):IL-2 receptor $\alpha$ (IL-2R$\alpha$) complex \cite{bindingil2}.
 
-Our retrospective validation experiments focused on mutations at residues in or proximal to the protein-protein interface. Including all such experimentally tested and reported mutations \cite{binding2barnase,bindingbarnase,bindingcytc,bindingifna2,bindingil2}, each structure included anywhere from 5 to 19 ranked designs. In total, we tested 58 mutations using default, out-of-the-box \osprey settings and parameters. Each design included one or two mutable residues along with a set of surrounding flexible residues. Flexible residues were chosen by selecting all residues within 4 \AA of the mutable residues and removing those which only have backbone interactions. 
+Our retrospective validation experiments focused on mutations at residues in or proximal to the protein-protein interface that were not limited to alanine scanning. Including some of these tested and reported mutations \cite{binding2barnase,bindingbarnase,bindingcytc,bindingifna2,bindingil2}, each structure included anywhere from 5 to 19 ranked designs. In total, we tested 58 mutations using default, out-of-the-box \osprey settings and parameters. Each design included one or two mutable residues along with a set of surrounding flexible residues (See Table \ref{table:spearman}). Flexible residues were chosen by selecting all residues within 4 {\AA} of the mutable residues and removing those which only have backbone interactions. 
+
+\begin{table}[h!]\label{table:spearman}
+\tiny
+\parbox{.5\linewidth}{
+\begin{tabular}{|K{1cm}|K{1.5cm}|K{1.5cm}|K{1.5cm}|}
+\hline
+ & Mutation(s) & Experimental Ranking & Computational Ranking\\
+\hline
+\parbox[t]{2mm}{\multirow{13}{*}{\rotatebox[origin=c]{90}{Barnase:Barstar, PDB ID: 1X1U}}} & D39A & 1 & 1\\
+ & H102A & 2 & 3\\
+ & R87A & 3 & 5\\
+ & K27A & 4 & 8\\
+ & R59A & 5 & 2\\
+ & D35A & 6 & 4\\
+ & Y29A & 7 & 7\\
+ & E73A & 8 & 12\\
+ & E76A & 9 & 6\\
+ & W35F & 10 & 11\\
+ & E60A & 11 & 10\\
+ & Y29F & 12 & 9\\ \cline{3-4}
+ && \multicolumn{2}{c|}{$\rho = 0.755$} \\
+\hline
+\parbox[t]{2mm}{\multirow{17}{*}{\rotatebox[origin=c]{90}{IL-2:IL-2R$\alpha$, PDB ID: 2B5I}}} & K38E, S39D & 1.5 & 1\\
+ & R35T, R36S & 1.5 & 2\\
+ & R35K, R36K & 3 & 4\\
+ & E1K, D4K & 4 & 7\\
+ & E29R & 5 & 5\\
+ & L2A & 6 & 16\\
+ & D4K & 7.5 & 9\\
+ & S39A, S41A & 7.5 & 12\\
+ & E1K & 9 & 11\\
+ & H120A & 10 & 10\\
+ & E29A & 11 & 6\\
+ & L42S, Y43L & 12 & 3\\
+ & E1Q & 13 & 14\\
+ & N27A & 14 & 15\\
+ & K38T & 15 & 8\\
+ & D4N & 16 & 13\\ \cline{3-4} 
+ && \multicolumn{2}{c|}{$\rho = 0.554$}  \\
+\hline
+\end{tabular}
+}
+\parbox{.5\linewidth}{
+\begin{tabular}{|K{1cm}|K{1.5cm}|K{1.5cm}|K{1.5cm}|}
+\hline
+\multirow{7}{*}{\rotatebox[origin=c]{90}{\parbox[t]{2.5cm}{\centering Cyt{\it{c}}:Cyt{\it{c}} peroxidase, PDB ID: 2PCB}}} &&& \\
+ & E290N & 1 & 2\\
+ & D34N & 2 & 4\\
+ & A193F & 3 & 1\\
+ & E35Q & 4 & 3\\ 
+ & E32Q & 5 & 5\\ \cline{3-4}
+ && \multicolumn{2}{c|}{$\rho = 0.500$} \\ 
+\hline
+\parbox[t]{2mm}{\multirow{20}{*}{\rotatebox[origin=c]{90}{IFN$\alpha$2:ifnar2, PDB ID: 3S9D}}} & R33Q & 1 & 1\\
+ & R33A & 2 & 2\\
+ & R33K & 3 & 5\\
+ & L30A & 4 & 6\\
+ & R149A & 5 & 4\\
+ & L30V & 6 & 9\\
+ & A148A & 7 & 10\\
+ & A145G & 8 & 14\\
+ & A145M & 9 & 3\\
+ & L15A & 10 & 13\\
+ & L153A & 11 & 12\\
+ & L26A & 12 & 7\\
+ & S152A & 13 & 16\\
+ & F27A & 14 & 8\\
+ & S25A & 15 & 18\\
+ & D35A & 16 & 17\\
+ & R22A & 17 & 11\\
+ & M16A & 18 & 15\\
+ & N156A & 19 & 19\\ \cline{3-4}
+ && \multicolumn{2}{c|}{$\rho = 0.795$} \\
+ \hline
+ \multicolumn{2}{|c|}{} & {\textbf{Across All}} & $\rho = 0.762$ \\
+\hline
+\end{tabular}
+}
+\caption{Allowed mutations and compared rankings. A Spearman's $\rho$ value is calculated for each system and shown here. The ``Across All" value is calculated by ranking each system individually and then calculating the Spearman's $\rho$ across all of the designs---in other words, it is the Pearson correlation of the intra-system ranks of all the mutants.  We consider this meaningful because the output of a design calculation that is used to decide on mutants to make experimentally is simply the intra-system ranks of the mutants.}
+\end{table}
 
 For each system, the \ks scores were ranked in increasing order of reported experimental binding. Spearman's $\rho$ values were subsequently calculated for each system by calculating the statistical dependence between the \ks score rankings and the experimentally measured rankings. 
 
-\begin{table}[h!]\label{table:spearman}
-\centering
-\begin{tabular}{ |c||c|  }
- \hline
- \textbf{Structures (PDB ID)}& \textbf{Spearman's $\rho$} \\
- \hline 
- 3S9D   & 0.795 \\
- \hline
- 1X1U   & 0.755 \\
- \hline
- 2B5I   & 0.554 \\
- \hline
- 2PCB   & 0.500 \\
- \hline
- \textbf{Across Structures} &   \textbf{0.762}  \\
- \hline
-\end{tabular}
-\caption{Spearman's $\rho$ table. A Spearman's $\rho$ value is calculated for each system and shown here. The ``Across Structures" value is calculated by ranking each system individually and then calculating the Spearman's $\rho$ across all of the designs---in other words, it is the Pearson correlation of the intra-system ranks of all the mutants.  We consider this meaningful because the output of a design calculation that is used to decide on mutants to make experimentally is simply the intra-system ranks of the mutants.  }
-\end{table}
+% \begin{table}[h!]\label{table:spearman}
+% \centering
+% \begin{tabular}{ |c||c|  }
+%  \hline
+%  \textbf{Structures (PDB ID)}& \textbf{Spearman's $\rho$} \\
+%  \hline 
+%  3S9D   & 0.795 \\
+%  \hline
+%  1X1U   & 0.755 \\
+%  \hline
+%  2B5I   & 0.554 \\
+%  \hline
+%  2PCB   & 0.500 \\
+%  \hline
+%  \textbf{Across Structures} &   \textbf{0.762}  \\
+%  \hline
+% \end{tabular}
+% \caption{Spearman's $\rho$ table. A Spearman's $\rho$ value is calculated for each system and shown here. The ``Across Structures" value is calculated by ranking each system individually and then calculating the Spearman's $\rho$ across all of the designs---in other words, it is the Pearson correlation of the intra-system ranks of all the mutants.  We consider this meaningful because the output of a design calculation that is used to decide on mutants to make experimentally is simply the intra-system ranks of the mutants.  }
+% \end{table}
 
 \begin{figure}\label{fig:rankings}
 \center
